fix: gap fixes

--- a/src/components/productCard/productCard.module.css
+++ b/src/components/productCard/productCard.module.css
@@ -21,7 +21,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 5px;
 
     height: 58px;
     border-radius: 7px;
